@@ -91,7 +91,6 @@ class NagiosPerfdataCollector(diamond.collector.Collector):
     def get_default_config(self):
         config = super(NagiosPerfdataCollector, self).get_default_config()
         config.update({
-            'enabled': 'False',
             'path': 'nagiosperfdata',
             'perfdata_dir': '/var/spool/diamond/nagiosperfdata',
         })
